# pybites_challenges

./: .pre-commit-config.yaml  create_files.py  pyproject.toml
pybites_challenges/: bite_1.py  bite_15.py  bite_16.py  bite_2.py  bite_26.py  bite_3.py  bite_37.py  bite_5.py  bite_8.py
pybites_challenges/1/: bite_1.py  test_bite_1.py
pybites_challenges/15/: bite_15.py  test_bite_15.py
pybites_challenges/16/: bite_16.py  test_bite_16.py
pybites_challenges/2/: bite_2.py  test_bite_2.py
pybites_challenges/26/: bite_26.py  test_bite_26.py
pybites_challenges/33/: README.md  bite.html  test_transpose.py  transpose.py
pybites_challenges/37/: bite_37.py  test_bite_37.py
pybites_challenges/5/: bite_5.py  test_bite_5.py
pybites_challenges/8/: bite_8.py  test_bite_8.py
tests/: test_bite_1.py  test_bite_15.py  test_bite_16.py  test_bite_26.py  test_bite_37.py  test_bite_5.py  test_bite_8.py
utils/: create_files.py
