[tool.poetry]
name = "pybites_challenges"
version = "0.1.0"
description = ""
authors = ["Matt Burnside <burnside.matthew@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
confparser = "^0.1.7"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
